[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true
src_paths = ["midiplayer"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[build-system]
requires = ["setuptools>=46", "setuptools_scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
