[metadata]
name = midiplayer
description = Play MIDI files to a MIDI port.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
author = m_k
keywords = midi, player
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Topic :: Multimedia :: Sound/Audio :: Players
url = https://github.com/MarkKoz/comp-522/tree/proj3
project_urls =
    Source = https://github.com/MarkKoz/comp-522/tree/proj3
    Tracker = https://github.com/MarkKoz/comp-522/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    mido>=1.1
    python-rtmidi>=1

[options.entry_points]
console_scripts =
    midiplayer = midiplayer.__main__:main

[flake8]
docstring-convention = all
exclude = __pycache__,__pypackages__,venv,.venv
max-line-length = 100
ignore =
    E203, W503,
    # Missing Docstrings
    D100,D104,D105,D107,
    # Docstring Whitespace
    D203,D213,D214,D215,
    # Docstring Quotes
    D301,D302,
    # Docstring Content
    D401,D416,
    # Type Annotations
    ANN002,ANN003,ANN101,ANN102,ANN204,ANN206
per-file-ignores = **/__init__.py:F401,F403,F405,tests/*:D,ANN
ignore-names = mcs
